--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         
     </main>
-    <footer>Designed and Developed by <a href="" target="_blank">Jobayer Rahman</a></footer>
+    <footer>Designed and Developed by <a href="https://jubayerrahman.github.io/JubayerCompletePortfolio/" target="_blank">Jobayer Rahman</a></footer>
     <!-- script links -->
     <script src="./function.js"></script>
 </body>
