--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
                 <h2 id="codeResult" class="result"></h2>
                 <h2 id="codeResult1" class="result1"></h2>
                 </div>
-                <button id="codeCopy"> Copy </button>
+                <div class="lastButton">
+                <button id="codeCopy" class="copy"> Copy </button>
                 <button id="codeBack"> < Back </button>
+                </div>
             </div>
         </div>
         <div class="decodeSection" id="decodeSection">
@@ -48,13 +50,15 @@
                 <h2 id="decodeResult" class="result"></h2>
                 <h2 id="decodeResult1" class="result1"></h2>
                 </div>
-                <button id="decodeCopy"> Copy </button>
+                <div class="lastButton">
+                <button id="decodeCopy" class="copy"> Copy </button>
                 <button id="deCodeback"> < Back </button>
+                </div>
             </div>
         </div>
         
     </main>
-    <footer>Designed and Developed by <a href="https://jubayerrahman.github.io/JubayerCompletePortfolio/" target="_blank">Jobayer Rahman</a></footer>
+    <footer>Designed and Developed by <a href="" target="_blank">Jobayer Rahman</a></footer>
     <!-- script links -->
     <script src="./function.js"></script>
 </body>
