--- a/index.html
+++ b/index.html
@@ -1,65 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <!-- bootstrap css linke -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"/>
+    <link rel="stylesheet" href="./style.css" />
     <title>Rot Code Generator</title>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-        <div class="titleSection">
-            <h2 class="title">ROT Code generator</h2>
-            <p><b>Note:</b> <code>This is  an application with which you can convert your clean text <br> 
-            into a rot code or you can decode a rot code and figure out the message behind <br>
-            the code</code></p>
+      <div class="titleSection">
+        <h2 class="title">ROT Code generator</h2>
+        <p>
+          <b style="color:#809ce2 ;">Note:</b>
+          <code
+            >This is an application with which you can convert your clean text
+            <br />
+            into a rot code or you can decode a rot code and figure out the
+            message behind <br />
+            the code</code
+          >
+        </p>
+      </div>
+      <div class="buttonSection">
+        <button id="makeaCode" class="makeaCode">Make a Code</button>
+        <button id="decodeaCode" class="decodeaCode">Decode a Code</button>
+      </div>
+      <div class="codeSection" id="codeSection">
+        <div class="inputSection" id="codeinputSection">
+          <textarea
+            id="text"
+            maxlength="500"
+            rows="10"
+            placeholder="Enter Your Text Without space"
+          ></textarea>
+          <br />
+          <button id="CodeSubmit">submit</button>
         </div>
-        <div class="buttonSection">
-            <button id="makeaCode" class="makeaCode">Make a Code</button>
-            <button id="decodeaCode" class="decodeaCode">Decode a Code</button>
-        </div>
-        <div class="codeSection" id="codeSection">
-            <div class="inputSection" id="codeinputSection">
-                <textarea id="text" maxlength="500" rows="10" placeholder="Enter Your Text Without space"></textarea>
-            <br>
-            <button id="CodeSubmit">submit</button>
-            </div>
-            <div class="outputSection" id="codeoutputSection">
-                <div class="result">
-                <h2 id="codeResult" class="result"></h2>
-                <h2 id="codeResult1" class="result1"></h2>
-                </div>
-                <div class="lastButton">
-                <button id="codeCopy" class="copy"> Copy </button>
-                <button id="codeBack"> < Back </button>
-                </div>
-            </div>
-        </div>
-        <div class="decodeSection" id="decodeSection">
-            <div class="inputSection" id="decodeinputSection">
-                <textarea id="Decodetext" maxlength="500" rows="10" placeholder="Enter Your Code Without space"></textarea>
-            <br>
-            <button id="decodeSubmit">submit</button>
-            </div>
-            <div class="deoutputSection" id="deoutputSection">
-                <div class="result">
-                <h2 id="decodeResult" class="result"></h2>
-                <h2 id="decodeResult1" class="result1"></h2>
-                </div>
-                <div class="lastButton">
-                <button id="decodeCopy" class="copy"> Copy </button>
-                <button id="deCodeback"> < Back </button>
+        <div class="outputSection" id="codeoutputSection">
+            <div class="copyNotification" id="copyNotification">
+                <div class="alert alert-success" role="alert">
+                    Successfully Copied!
                 </div>
             </div>
+          <div class="result">
+            <h2 id="codeResult" class="result"></h2>
+            <h2 id="codeResult1" class="result1"></h2>
+          </div>
+          <div class="lastButton">
+            <button id="codeCopy" class="copy">Copy</button>
+            <button id="codeBack">< Back</button>
+          </div>
         </div>
-        
+      </div>
+      <div class="decodeSection" id="decodeSection">
+        <div class="inputSection" id="decodeinputSection">
+          <textarea
+            id="Decodetext"
+            maxlength="500"
+            rows="10"
+            placeholder="Enter Your Code Without space"
+          ></textarea>
+          <br />
+          <button id="decodeSubmit">submit</button>
+        </div>
+        <div class="deoutputSection" id="deoutputSection">
+            <div class="copyNotification" id="copyNotification2">
+                <div class="alert alert-success" role="alert">
+                    Successfully Copied!
+                </div>
+            </div>
+          <div class="result">
+            <h2 id="decodeResult" class="result"></h2>
+            <h2 id="decodeResult1" class="result1"></h2>
+          </div>
+          <div class="lastButton">
+            <button id="decodeCopy" class="copy">Copy</button>
+            <button id="deCodeback">< Back</button>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer>Designed and Developed by <a href="" target="_blank">Jobayer Rahman</a></footer>
+    <footer>
+      Designed and Developed by <a href="" target="_blank">Jobayer Rahman</a>
+    </footer>
     <!-- script links -->
     <script src="./function.js"></script>
-</body>
+    <!-- bootstrap js links -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+  </body>
 </html>
